--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,8 @@ button:focus-visible {
 
 body {
   margin: 0;
-  font-family: "Figtree", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Figtree", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
   /* height:100vh; */
@@ -77,31 +78,33 @@ body {
   /* font-size: 24px; */
 }
 
-.app{
-  background: #c8f0fd;
+.app {
+  background: #ffff;
   max-height: max-content;
   font-size: 12px;
 }
 
-h1{
-  color:#165a72;
+.sideBarBackground {
+  background-color: #087bc7;
+}
+
+h1 {
+  color: #165a72;
   margin: 50px auto;
   font-size: 40px;
 }
 
-.menu1
-{
-  margin-bottom:40px;
+.menu1 {
+  margin-bottom: 40px;
   margin-top: 20px;
 }
 
-.menuItem
-{
-  margin: "10px 0 20px 0"; 
-  color: 100
+.menuItem {
+  margin: "10px 0 20px 0";
+  color: 100;
 }
 
-h2{
+h2 {
   font-size: 20px;
 }
 
@@ -128,12 +131,11 @@ body,
   align-items: center;
 }
 
-button{
-  color:#165a72;
+button {
+  color: #165a72;
   text-shadow: #a8d5e5;
 }
 
-.paddingLeft{
+.paddingLeft {
   padding-left: 20px;
 }
-
